--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Validate BPMN process models."
+name: "Validate BPMN process models"
 description: "GitHub Action workflow for automated validation of BPMN process models"
 author: "Kristoffer Högberg"
 
@@ -7,12 +7,12 @@ inputs:
     description: 'Location of your process models.'
     required: true
   custom-rules-folder:
-    description: 'Location of your custom bpmnlint rules..'
+    description: 'Location of your custom bpmnlint rules.'
     required: true
   bpmnlintrc-path:
     description: "Location of your bpmnlintrc configuration file."
+    required: true
 
 runs:
   using: "node16"
   main: "dist/index.js"
-
