--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "@vercel/ncc": "^0.36.1",
-    "chalk": "^5.3.0"
+    "@vercel/ncc": "^0.36.1"
   }
 }
