added custom rules to config

--- a/BPMN/.bpmnlintrc
+++ b/BPMN/.bpmnlintrc
@@ -1,3 +1,7 @@
 {
-  "extends": "bpmnlint:recommended"
+    "extends": "bpmnlint:recommended",
+    "rules": {
+        "force-digit-id": "error",
+        "force-service-task-type": "error"
+    }
 }
