add inputs to workflow and change to on: workflow_call

--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -2,7 +2,16 @@ name: "Validate BPMN process models"
 
 on:
   workflow_call:
-
+    inputs:
+      bpmn-files-path:
+        description: 'Location of your process models.'
+        required: true
+      custom-rules-folder:
+        description: 'Location of your custom bpmnlint rules.'
+        required: true
+      bpmnlintrc-path:
+        description: "Location of your bpmnlintrc configuration file."
+        required: true
 jobs:
   validate_bpmn_process_models:
     runs-on: ubuntu-latest
@@ -21,7 +30,7 @@ jobs:
 
       - uses: ./
         with:
-          bpmn-files-path: 'path/to/your/bpmn/files'
-          custom-rules-folder: 'path/to/custom_rules'
-          bpmnlintrc-path: 'path/to/.bpmnlintrc'
+          bpmn-files-path: ${{ inputs.bpmn-files-path }}
+          custom-rules-folder: ${{ inputs.custom-rules-folder }}
+          bpmnlintrc-path:  ${{ inputs.bpmnlintrc-path }}
 
