add type to inputs

--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -6,12 +6,15 @@ on:
       bpmn-files-path:
         description: 'Location of your process models.'
         required: true
+        type: string
       custom-rules-folder:
         description: 'Location of your custom bpmnlint rules.'
         required: true
+        type: string
       bpmnlintrc-path:
         description: "Location of your bpmnlintrc configuration file."
         required: true
+        type: string
 jobs:
   validate_bpmn_process_models:
     runs-on: ubuntu-latest
