--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -17,7 +17,7 @@ on:
         description: "Location of your bpmnlintrc configuration file."
         required: true
         type: string
-        default: 'BPMN/bpmnlintrc'
+        default: 'BPMN/.bpmnlintrc'
 jobs:
   validate_bpmn_process_models:
     runs-on: ubuntu-latest
