--- a/action.yml
+++ b/action.yml
@@ -14,8 +14,22 @@ inputs:
     required: true
 
 runs:
-  using: "node16"
-  main: "dist/index.js"
+  using: "composite"
+  steps:
+    # Set up NodeJs
+    - name: Set up NodeJs
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16.20.1
+
+    # Install bpmnlint
+    - name: Install bpmnlint
+      shell: bash
+      run: npm install -g bpmnlint
+
+    # Run action scriptSchema validation
+    - run: node ${{ github.workspace }}/dist/index.js
+      shell: bash
 
 branding:
   icon: 'activity'
