--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -1,9 +1,7 @@
 name: "Validate BPMN process models"
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 jobs:
   validate_bpmn_process_models:
     runs-on: ubuntu-latest
